[package]
name = "firstrun"
version = "0.1.0"
edition = "2024"

[dependencies]
bytemuck = { version = "1.22.0", features = ["extern_crate_std"] }
nom = "8.0.0"
num = "0.4.3"
pack1 = { version = "1.0.0", features = ["bytemuck"] }
rerun = { version = "0.23.1", features = ["native_viewer", "run"] }

[build-dependencies]
re_build_tools = "0.23.1"
